# DiscordApplet

./: .gitignore  README.md  bot.py  flake.nix  main.py  pyproject.toml  requirements.txt  server.py  state.py
com.github.rotlug.discordapplet/: metadata.json
com.github.rotlug.discordapplet/contents/ui/: main.qml
discordapplet/: __main__.py  bot.py  server.py  state.py
discordapplet-gnome/: Makefile  ambient.d.ts  extension.ts  metadata.json  package-lock.json  package.json  socket.ts  tsconfig.json
discordapplet-gnome/indicator/: avatar_circle.ts  indicator.ts
discordapplet-gnome/schemas/: gschemas.compiled  org.gnome.shell.extensions.discordapplet.gschema.xml
